welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:7: error: ';' expected but integer literal found.
    } cpt+=8
           ^